--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,10 @@
     margin: 0 auto;
     padding: 0 20px;
 }
+.stiky{
+    /* position: sticky; */
+    
+}
 .error{
     color: red;
     font-size: 40px;
@@ -103,7 +107,129 @@
     height: 64px;
     animation: rotate 1.2s linear infinite alternate-reverse;
 }
-
+.yotublink{
+    color: white;
+   text-decoration: none; 
+}
+.yotublink:hover{
+    color: rgb(217, 255, 0);
+}
+.btn-danger{
+    width: 100px;
+}
 @keyframes rotate {
     100% { transform: rotate(360deg)}
+}
+.col{
+    background-color:#e6c5bb;
+}
+/* // modal window/// */
+.modal-window{
+    width: 100% !important;
+    min-height: 100% !important;
+    background-color: rgba(255, 255, 255, 0.616);
+    backdrop-filter: blur(6px);
+    position: fixed;
+    top: 0;
+    z-index:99999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.modal-oyna{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.modal-container{
+    width: 60%;
+    height: 620px;
+    background-color:rgba(236, 223, 218, 0.959);
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px 10px rgb(35, 142, 53);    
+}
+
+ .modal-hide{
+    transform: translateY(-900px);
+ }
+.face{
+    width: 40px;
+    border-radius: 50%;
+    font-size: 24px;
+}
+.face:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+#close{
+    cursor: pointer;
+    position: absolute;
+    z-index: 22222222222222222222222222222;
+}
+.img-fon{
+ width: 400px;
+ height: 500px;
+ border-radius:20px;
+ margin-right: 20px;   
+}
+.faces {
+    margin: 0 auto;
+  }
+  
+  .faces:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translateX(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+  
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-9px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
+    
+    30%, 50%, 70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+    
+    40%, 60% {
+        transform: translate3d(4px, 0, 0);
+    }
 }
